--- a/referral.html
+++ b/referral.html
@@ -49,72 +49,76 @@
 
   <!-- Firebase -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { 
+    getAuth, 
+    isSignInWithEmailLink, 
+    signInWithEmailLink, 
+    onAuthStateChanged 
+  } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+  import { 
+    getFirestore, 
+    doc, 
+    setDoc, 
+    getDoc 
+  } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBVCCuIU6O_kwLIu18zFmLKx4nAZ15S5gU",
-      authDomain: "indomon-quest.firebaseapp.com",
-      projectId: "indomon-quest",
-      storageBucket: "indomon-quest.firebasestorage.app",
-      messagingSenderId: "483061706588",
-      appId: "1:483061706588:web:ef2e02e7e8c2f08c12db99"
-    };
+  const firebaseConfig = {
+    apiKey: "AIzaSyBVCCuIU6O_kwLIu18zFmLKx4nAZ15S5gU",
+    authDomain: "indomon-quest.firebaseapp.com",
+    projectId: "indomon-quest"
+  };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
 
-    // Simulasi login pakai email tersimpan
-    const email = localStorage.getItem("emailForSignIn") || "guest@example.com";
-    document.getElementById("welcomeMsg").textContent = `Halo, ${email}`;
+  // 🔥 Cek apakah link ini untuk sign-in
+  window.addEventListener("load", async () => {
+    if (isSignInWithEmailLink(auth, window.location.href)) {
+      let email = window.localStorage.getItem("emailForSignIn");
+      if (!email) {
+        email = window.prompt("Masukkan email yang kamu gunakan untuk daftar:");
+      }
 
-    // Referral link pribadi
-    const referralLink = `${window.location.origin}/?ref=${btoa(email)}`;
-    document.getElementById("referralLink").value = referralLink;
+      try {
+        const result = await signInWithEmailLink(auth, email, window.location.href);
+        const user = result.user;
 
-    // Ambil data referral
-    async function loadReferralData() {
-      const q = query(collection(db, "referrals"), where("referrer", "==", email));
-      const snap = await getDocs(q);
+        // Update Firestore status jadi verified
+        await setDoc(doc(db, "preregistrations", user.uid), {
+          email: user.email,
+          verified: true,
+          verifiedAt: Date.now()
+        }, { merge: true });
 
-      let todayReferrals = 0;
-      let totalReferrals = 0;
-      let todayReward = 0;
-      let totalReward = 0;
+        window.localStorage.removeItem("emailForSignIn");
+        console.log("✅ Email berhasil diverifikasi & login:", user.email);
 
-      const today = new Date();
-      const startOfDay = new Date(today.getFullYear(), today.getMonth(), today.getDate()).getTime();
-
-      snap.forEach(doc => {
-        const data = doc.data();
-        totalReferrals++;
-        totalReward += data.reward || 0;
-
-        if (data.ts >= startOfDay) {
-          todayReferrals++;
-          todayReward += data.reward || 0;
-        }
-      });
-
-      // Update UI
-      document.getElementById("todayReferrals").textContent = todayReferrals;
-      document.getElementById("todayReward").textContent = todayReward.toLocaleString();
-      document.getElementById("totalReferrals").textContent = totalReferrals;
-      document.getElementById("totalReward").textContent = totalReward.toLocaleString();
-      document.getElementById("withdrawable").textContent = (totalReward * 0.5).toLocaleString();
-      document.getElementById("locked").textContent = (totalReward * 0.5).toLocaleString();
+      } catch (err) {
+        console.error("❌ Verifikasi gagal:", err);
+        alert("Verifikasi gagal. Link mungkin kedaluwarsa.");
+      }
     }
+  });
 
-    loadReferralData();
+  // 🔥 Pantau status login user
+  onAuthStateChanged(auth, async (user) => {
+    const dashboard = document.getElementById("referral-dashboard");
+    const info = document.getElementById("referral-info");
 
-    // Copy button
-    window.copyLink = () => {
-      const input = document.getElementById("referralLink");
-      input.select();
-      input.setSelectionRange(0, 99999);
-      document.execCommand("copy");
-      alert("✅ Link referral dicopy!");
+    if (user) {
+      const snap = await getDoc(doc(db, "preregistrations", user.uid));
+      const data = snap.exists() ? snap.data() : {};
+
+      dashboard.style.display = "block";
+      info.textContent = `👋 Selamat datang ${user.email}. Status: ${data.verified ? "✅ Terverifikasi" : "⏳ Pending"}`;
+    } else {
+      dashboard.style.display = "none";
+      info.textContent = "⚠️ Kamu belum login.";
     }
-  </script>
+  });
+</script>
 </body>
+
 </html>
