--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
     try {
       const actionCodeSettings = {
-        url: window.location.origin + "/finishSignUp.html",
+        url: window.location.origin + "/indomon-quest/referral.html", // halaman yang ada di GitHub Pages
         handleCodeInApp: true,
       };
 
@@ -345,3 +345,4 @@
 </body>
 
 </html>
+
