--- a/dashboard.html
+++ b/dashboard.html
@@ -7,40 +7,47 @@
 </head>
 <body class="bg-gray-900 text-gray-100 min-h-screen flex items-center justify-center p-4">
 
-  <div class="max-w-3xl w-full bg-gray-800 rounded-2xl shadow-lg p-6">
+  <!-- Dashboard -->
+  <div id="dashboard" class="max-w-3xl w-full bg-gray-800 rounded-2xl shadow-lg p-6 opacity-0 transform scale-95 transition-all duration-500 hidden">
     <!-- Header -->
-    <div class="flex flex-col sm:flex-row sm:items-center sm:space-x-4 border-b border-gray-700 pb-4 mb-6 text-center sm:text-left">
-      <img id="profile-pic" class="w-20 h-20 mx-auto sm:mx-0 rounded-full border-2 border-yellow-400" src="" alt="Foto Profil">
-      <div class="mt-3 sm:mt-0">
+    <div class="flex flex-col sm:flex-row sm:items-center sm:space-x-4 border-b border-gray-700 pb-4 mb-6">
+      <img id="profile-pic" class="w-20 h-20 rounded-full border-2 border-yellow-400 mx-auto sm:mx-0 mb-4 sm:mb-0 shadow-lg" src="" alt="Foto Profil">
+      <div class="text-center sm:text-left">
         <h2 id="display-name" class="text-xl font-bold"></h2>
         <p id="email" class="text-gray-400 text-sm"></p>
         <p id="phone" class="text-gray-400 text-sm"></p>
       </div>
-      <span id="status" class="mt-3 sm:mt-0 sm:ml-auto bg-yellow-500 text-black text-sm font-bold px-3 py-1 rounded-lg"></span>
+      <span id="status" class="mt-3 sm:mt-0 sm:ml-auto bg-yellow-500 text-black text-sm font-bold px-3 py-1 rounded-lg shadow"></span>
     </div>
 
     <!-- Info Section -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
-      <div class="bg-gray-700 p-4 rounded-xl">
+      <!-- Founder Pack -->
+      <div class="bg-gray-700 p-4 rounded-xl text-center md:text-left shadow-md">
         <h3 class="text-lg font-bold mb-2">🎁 Paket Founder</h3>
         <p id="pack" class="text-yellow-400 text-xl font-bold">Free</p>
-        <button id="upgrade" class="mt-3 bg-blue-500 hover:bg-blue-400 text-white px-4 py-2 rounded-lg font-bold w-full">Upgrade</button>
+        <button id="upgrade" class="mt-3 bg-gradient-to-r from-blue-500 to-indigo-500 hover:from-blue-400 hover:to-indigo-400 px-4 py-2 rounded-lg font-bold text-sm transition-all duration-300 shadow-md">Upgrade</button>
       </div>
 
-      <div class="bg-gray-700 p-4 rounded-xl">
+      <!-- Referral -->
+      <div class="bg-gray-700 p-4 rounded-xl shadow-md">
         <h3 class="text-lg font-bold mb-2">⭐ Referral</h3>
-        <p class="text-sm text-gray-300 mb-2">Bagikan link ini ke temanmu:</p>
+        <p class="text-sm text-gray-300 mb-2">Bagikan link ini:</p>
         <input id="referral-link" class="w-full bg-gray-900 text-sm p-2 rounded border border-gray-600" readonly>
-        <button id="copy-ref" class="mt-2 bg-yellow-500 text-black px-3 py-1 rounded text-sm font-bold hover:bg-yellow-400 w-full">Copy</button>
-        <p class="mt-2 text-gray-300 text-sm">Total Referral: <span id="referral-total" class="font-bold text-yellow-400">0</span></p>
+        <div class="flex mt-2 gap-2">
+          <button id="copy-ref" class="flex-1 bg-yellow-500 text-black px-3 py-1 rounded text-sm font-bold hover:bg-yellow-400 transition">Copy</button>
+        </div>
+        <p id="ref-count" class="text-xs text-gray-400 mt-2">Total referral: 0</p>
       </div>
 
-      <div class="bg-gray-700 p-4 rounded-xl">
+      <!-- Reward -->
+      <div class="bg-gray-700 p-4 rounded-xl text-center md:text-left shadow-md">
         <h3 class="text-lg font-bold mb-2">💰 Reward</h3>
         <p id="reward" class="text-green-400 text-2xl font-bold">Rp 0</p>
       </div>
 
-      <div class="bg-gray-700 p-4 rounded-xl">
+      <!-- Status Player -->
+      <div class="bg-gray-700 p-4 rounded-xl shadow-md">
         <h3 class="text-lg font-bold mb-2">⚔️ Status Player</h3>
         <ul class="text-sm text-gray-300 space-y-1">
           <li id="status-player">Free Player</li>
@@ -52,14 +59,23 @@
 
     <!-- Logout -->
     <div class="text-center">
-      <button id="logout" class="bg-red-500 px-4 py-2 rounded-lg font-bold hover:bg-red-400 w-full sm:w-auto">Logout</button>
+      <button id="logout" class="bg-red-500 px-4 py-2 rounded-lg font-bold hover:bg-red-400 transition-all shadow-md">Logout</button>
     </div>
+  </div>
+
+  <!-- Loading -->
+  <div id="loading" class="flex flex-col items-center text-gray-300 space-y-3">
+    <svg class="animate-spin h-8 w-8 text-yellow-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+      <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+      <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v8z"></path>
+    </svg>
+    <p class="animate-pulse">⏳ Memuat dashboard...</p>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getFirestore, doc, getDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     // 🔹 Config Firebase
     const firebaseConfig = {
@@ -75,6 +91,9 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
+    // Elemen UI
+    const dashboard = document.getElementById("dashboard");
+    const loading = document.getElementById("loading");
     const displayName = document.getElementById("display-name");
     const email = document.getElementById("email");
     const phone = document.getElementById("phone");
@@ -82,11 +101,12 @@
     const pack = document.getElementById("pack");
     const status = document.getElementById("status");
     const referralLink = document.getElementById("referral-link");
-    const referralTotal = document.getElementById("referral-total");
     const reward = document.getElementById("reward");
     const badge = document.getElementById("badge");
     const statusPlayer = document.getElementById("status-player");
+    const refCount = document.getElementById("ref-count");
 
+    // 🔹 Auth state listener
     onAuthStateChanged(auth, async (user) => {
       if (user) {
         displayName.textContent = user.displayName || "Player";
@@ -94,45 +114,62 @@
         profilePic.src = user.photoURL || "https://i.pravatar.cc/100";
 
         const userRef = doc(db, "users", user.uid);
-        const snap = await getDoc(userRef);
 
-        if (snap.exists()) {
-          const data = snap.data();
-          pack.textContent = data.pack || "Free";
-          phone.textContent = data.phone || "Nomor belum terdaftar";
-          referralLink.value = `https://www.indomonquest.web.id/?ref=${user.uid}`;
+        // 🔄 Real-time listener untuk update otomatis
+        onSnapshot(userRef, (snap) => {
+          if (snap.exists()) {
+            const data = snap.data();
 
-          referralTotal.textContent = data.referral || 0;
-          reward.textContent = data.reward ? `Rp ${data.reward.toLocaleString()}` : "Rp 0";
+            pack.textContent = data.pack || "Free";
+            phone.textContent = data.phone || "Nomor belum terdaftar";
+            refCount.textContent = `Total referral: ${data.referral || 0}`;
+            referralLink.value = `https://www.indomonquest.web.id/?ref=${user.uid}`;
+            reward.textContent = data.reward ? `Rp ${data.reward.toLocaleString()}` : "Rp 0";
 
-          if (data.pack && data.pack.toLowerCase() !== "free") {
-            status.textContent = data.pack.toUpperCase() + " Founder";
-            badge.textContent = "🏅 Founder Badge";
-            statusPlayer.textContent = "Premium Player";
-          } else {
-            status.textContent = "Free Player";
+            // 🔹 Update status player & badge
+            if (data.pack && data.pack.toLowerCase() !== "free") {
+              status.textContent = `${data.pack.toUpperCase()} Founder`;
+              status.className = "mt-3 sm:mt-0 sm:ml-auto bg-green-400 text-black text-sm font-bold px-3 py-1 rounded-lg shadow";
+              badge.textContent = "🏅 Founder Badge";
+              statusPlayer.textContent = "Premium Player";
+              statusPlayer.className = "text-green-400 font-bold";
+            } else {
+              status.textContent = "Free Player";
+              status.className = "mt-3 sm:mt-0 sm:ml-auto bg-yellow-500 text-black text-sm font-bold px-3 py-1 rounded-lg shadow";
+              badge.textContent = "❌ No Founder Badge";
+              statusPlayer.textContent = "Free Player";
+              statusPlayer.className = "text-gray-300";
+            }
+
+            // ✅ Fade-in animasi
+            loading.classList.add("hidden");
+            dashboard.classList.remove("hidden");
+            setTimeout(() => {
+              dashboard.classList.add("opacity-100", "scale-100");
+            }, 50);
           }
-        } else {
-          status.textContent = "Free Player";
-        }
+        });
       } else {
         window.location.href = "index.html";
       }
     });
 
+    // Copy Referral
     document.getElementById("copy-ref").addEventListener("click", () => {
       referralLink.select();
       document.execCommand("copy");
-      alert("Referral link disalin!");
+      alert("✅ Referral link disalin!");
     });
 
-    document.getElementById("upgrade").addEventListener("click", () => {
-      window.location.href = "https://www.indomonquest.web.id/#packages";
-    });
-
+    // Logout
     document.getElementById("logout").addEventListener("click", async () => {
       await signOut(auth);
       window.location.href = "index.html";
+    });
+
+    // Upgrade → redirect ke halaman paket
+    document.getElementById("upgrade").addEventListener("click", () => {
+      window.location.href = "https://www.indomonquest.web.id/packages";
     });
   </script>
 </body>
