--- a/dashboard.html
+++ b/dashboard.html
@@ -169,7 +169,7 @@
 
     // Upgrade → redirect ke halaman paket
     document.getElementById("upgrade").addEventListener("click", () => {
-      window.location.href = "https://www.indomonquest.web.id/packages";
+      window.location.href = "https://www.indomonquest.web.id/#packages";
     });
   </script>
 </body>
